ranged/melee AB for npc

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -839,7 +839,7 @@
     morale-check: Morale Check
     trained-skill: Trained Skill
     attacks-per-turn: Attacks Per Turn
-    attack-bonus-hit: Attack Bonus Hit
+    attack-bonus-hit: Attack Bonus to Hit
     attack-bonus-damage: Attack Bonus Damage
     abilities: Abilities
     combat: Combat
